# micromachines

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Micromachines.cbp  README.md  client  cmake_install.cmake
assets/pistas/: 1.json
config/: client_settings.json  server_settings.json
extras/supresiones_valgrind/: minimal.supp  minimalQt.supp  minimalQt2.supp
includes/cliente/: Camara.h  Car.h  Cliente.h  CreadorTexturas.h  HiloDibujador.h  HiloGrabador.h  Pista.h  Renderizador.h  Ventana.h  VentanaCreacionPartida.h  VentanaListaPartidas.h  VentanaLobby.h  VentanaMenu.h  VentanaPartida.h  VentanaPodio.h  VistaAsfaltoRecto.h  VistaAuto.h  VistaCamino.h  VistaObjeto.h  VistaObjetoDinamico.h  VistaObjetoMovil.h  VistaPasto.h  VistaTierra.h
includes/cliente/GUI/: Animacion.h  AnimacionFactory.h  Area.h  Camara.h  Escena.h  EventoGUIHandler.h  HiloDibujador.h  ObjetoDinamico.h  Pista.h  Renderizador.h  Sonido.h  Texto.h  Textura.h  Ventana.h
includes/cliente/GUI/escenas/: Escena.h  EscenaLobby.h  EscenaMenu.h  EscenaPartida.h  EscenaPodio.h  EscenaSala.h
includes/cliente/GUI/eventos/: EventoGUIClick.h  EventoGUIKeyDown.h
includes/cliente/OLD/: Bloque.h  VistaAuto.h  VistaObjeto.h  VistaPasto.h  VistaTierra.h
includes/cliente/grabador/: HiloGrabador.h
includes/cliente/grabador/ffmpeg/: codec.h  output_stream.h
includes/cliente/red/: SocketTCPCliente.h
includes/cliente/utils/: ConfigCliente.h  DobleBuffer.h
includes/common/: Cola.h  ColaBloqueante.h  ColaNoProtegida.h  ColaProtegida.h  Conversor.h  EnviadorEventos.h  Handler.h  Hilo.h  RecibidorEventos.h
includes/common/eventos/: Evento.h  EventoAcelerar.h  EventoAparecioConsumible.h  EventoCrearPartida.h  EventoDesaparecioConsumible.h  EventoDesconexion.h  EventoFactory.h  EventoFinCarrera.h  EventoIDJugador.h  EventoIDVehiculoDeJugador.h  EventoIniciarPartida.h  EventoPartidaAgregada.h  EventoPartidaCreada.h  EventoSnapshot.h  EventoUnirseAPartida.h
includes/common/red/: Protocolo.h  SocketTCP.h
includes/servidor/: CoordinadorPartidas.h  DistribuidorEventos.h  HiloAceptador.h  Jugador.h  MiClase.h  Partida.h  SalaDeEspera.h  Servidor.h
includes/servidor/modelo/: Colisionable.h  Identificable.h  Mundo.h  Rueda.h  Vehiculo.h
includes/servidor/modelo/entidades/: CajaVida.h  Modificador.h  Vehiculo.h
includes/servidor/modelo/entidades/carrera/: Carrera.h  Checkpoint.h  Meta.h
includes/servidor/modelo/fisicas/: B2DVehiculo.h  ContactListener.h  Fisicas.h
includes/servidor/modelo/movimiento/: Posicion.h
includes/servidor/modelo/superficies/: NoSuperficie.h  Superficie.h  SuperficieAceite.h  SuperficieArena.h  SuperficieBarro.h  SuperficieFactory.h  SuperficiePista.h  SuperficieTierra.h
includes/servidor/red/: Jugador.h  SalaDeEspera.h  SocketTCPServidor.h
includes/servidor/utils/: ConfigServidor.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/Client/: Area.h  Car.cpp  Car.h  Dot.cpp  Dot.h  Pista.cpp  Pista.h  SdlTexture.cpp  SdlTexture.h  SdlWindow.cpp  SdlWindow.h  mainMicromachines.cpp
src/cliente/: Area.cpp  CMakeLists.txt  Camara.cpp  Car.cpp  Cliente.cpp  ClienteCMake.cbp  CreadorTexturas.cpp  HiloDibujador.cpp  HiloGrabador.cpp  Makefile  Pista.cpp  Renderizador.cpp  SdlException.cpp  SdlTexture.cpp  SdlWindow.cpp  Textura.cpp  Ventana.cpp  VentanaCreacionPartida.cpp  VentanaListaPartidas.cpp  VentanaLobby.cpp  VentanaMenu.cpp  VentanaPartida.cpp  VentanaPodio.cpp  VistaAsfaltoRecto.cpp  VistaAuto.cpp  VistaObjeto.cpp  VistaObjetoDinamico.cpp  VistaObjetoMovil.cpp  VistaPasto.cpp  VistaTierra.cpp  cmake_install.cmake  mainMicromachines.cpp  main_cliente.cpp
src/cliente/GUI/: Animacion.cpp  AnimacionFactory.cpp  Area.cpp  Camara.cpp  Escena.cpp  HiloDibujador.cpp  ObjetoDinamico.cpp  Pista.cpp  Renderizador.cpp  Sonido.cpp  Texto.cpp  Textura.cpp  Ventana.cpp
src/cliente/GUI/escenas/: Escena.cpp  EscenaLobby.cpp  EscenaMenu.cpp  EscenaPartida.cpp  EscenaPodio.cpp  EscenaSala.cpp
src/cliente/GUI/eventos/: EventoGUIClick.cpp  EventoGUIKeyDown.cpp
src/cliente/OLD/: Bloque.cpp  CreadorTexturas.cpp  SdlException.cpp  SdlTexture.cpp  VistaAuto.cpp  VistaObjeto.cpp  VistaTierra.cpp  mainMicromachines.cpp
src/cliente/excepciones/: SDLException.cpp
src/cliente/grabador/: HiloGrabador.cpp
src/cliente/grabador/ffmpeg/: FormatContext.cpp  OutputFormat.cpp  codec.cpp  frame.cpp  output_format.cpp  output_video.cpp  video_codec.cpp
src/cliente/jugadores/: Computadora.cpp  Jugador.cpp
src/cliente/red/: SocketTCPCliente.cpp
src/cliente/utils/: ConfigCliente.cpp
src/common/: Conversor.cpp  Cronometro.cpp  EnviadorEventos.cpp  Handler.cpp  Hilo.cpp  RecibidorEventos.cpp  Tile.cpp
src/common/eventos/: Evento.cpp  EventoAcelerar.cpp  EventoAparecioConsumible.cpp  EventoCrearPartida.cpp  EventoDesaparecioConsumible.cpp  EventoDesconexion.cpp  EventoFactory.cpp  EventoFinCarrera.cpp  EventoIDJugador.cpp  EventoIDVehiculoDeJugador.cpp  EventoIniciarPartida.cpp  EventoPartidaAgregada.cpp  EventoPartidaCreada.cpp  EventoSnapshot.cpp  EventoUnirseAPartida.cpp
src/common/red/: Protocolo.cpp  SocketTCP.cpp
src/servidor/: CMakeLists.txt  CoordinadorPartidas.cpp  DistribuidorEventos.cpp  HiloAceptador.cpp  Jugador.cpp  Makefile  MiClase.cpp  Partida.cpp  SalaDeEspera.cpp  Servidor.cpp  ServidorCMake.cbp  cmake_install.cmake  main_servidor.cpp
src/servidor/modelo/: Colisionable.cpp  Identificable.cpp  MiClase.cpp  Mundo.cpp  Rueda.cpp  Vehiculo.cpp
src/servidor/modelo/entidades/: CajaVida.cpp  Vehiculo.cpp
src/servidor/modelo/entidades/carrera/: Carrera.cpp  Checkpoint.cpp
src/servidor/modelo/entidades/checkpoints/: Checkpoint.cpp
src/servidor/modelo/fisicas/: B2DVehiculo.cpp  ContactListener.cpp  Fisicas.cpp
src/servidor/modelo/fisicas/transformaciones/: Quitar.cpp  Reubicar.cpp
src/servidor/modelo/movimiento/: Posicion.cpp
src/servidor/modelo/superficies/: SuperficieFactory.cpp
src/servidor/red/: Jugador.cpp  SalaDeEspera.cpp  SocketTCPServidor.cpp
src/servidor/utils/: ConfigServidor.cpp
test/: event_sender.py
(+1 files in other folders)
